# test-remote-mcp

./: .env  expenses.db  main.py  pyproject.toml
Clients/: client1.py
Local-MCP-Server/: calculator_mcp.py
Remote-MCP-Server/expense-tracker-mcp/: expenses.db  main.py
