[project]
name = "expense-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastmcp>=2.14.2",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.0",
    "langchain-core>=1.2.6",
    "langchain-google-genai>=4.1.3",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]
